# docurip

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOC.md  Documentation.md  LICENSE  README.md  REVIEW.md  REVIEWER.md  ROADMAP.md  UPDATE.md  crash-err.txt  dev-err.txt  dev-out.txt  dev-output.txt  index.html  package-lock.json  package.json  tailwind.config.js  version-bumper.html  vite.config.ts
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.kilo/: AGENTS.md
.kilo/agents/: code-reviewer.md  security-auditor.md  test-engineer.md  web-performance-auditor.md
.kilo/command/: build.md  code-simplify.md  plan.md  review.md  ship.md  spec.md  test.md
.kilo/rules/: 01-skills-workflow.md  02-subagents.md  03-codegraph-guide.md
docs/checks/: FIX-PLAN.md  PROBLEMS.md
docs/specs/: output-dir-plan.md  output-dir-redesign.md
scripts/: release.ps1
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  export.rs  exports.rs  lib.rs  main.rs  state.rs  system.rs
src-tauri/src/asset_dl/: downloader.rs
src-tauri/src/converter/: html_to_md.rs
src-tauri/src/crawler/: batch.rs  job.rs  mod.rs  orchestrator.rs  robots.rs  ssrf.rs
src-tauri/src/events/: bus.rs
src-tauri/src/fetcher/: headless.rs  http.rs  mod.rs
src-tauri/src/importer/: epub.rs  mod.rs  pdf.rs  text_cleaner.rs
src-tauri/src/parser/: dom.rs
src-tauri/src/settings/: config.rs  mod.rs  profiles.rs  templates.rs
src-tauri/src/sitemap/: mod.rs
src-tauri/src/writer/: fs.rs
src-tauri/tests/: e2e_crawl.rs
src-tauri/tests/fixtures/site/: index.html  page1.html  page2.html
src/components/: AnimatedCounter.tsx  BatchUrlList.tsx  EmptyState.tsx  ExportModal.tsx  LiveConsole.tsx  MarkdownPreview.tsx  ResultSearch.tsx  ResultTree.test.tsx  ResultTree.tsx  ShortcutRow.tsx  SitemapPickerModal.tsx  StatusBadge.tsx  SystemStatusBar.tsx  TemplateBar.test.tsx  TemplateBar.tsx  ToastContainer.tsx  TopStatusBar.tsx
src/contexts/: EscapeStack.tsx
src/hooks/: useCrawlEvents.test.tsx  useCrawlEvents.tsx  useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts  useNotifications.test.ts  useNotifications.ts  useShortcutOverrides.ts  useSystemStats.ts  useTheme.tsx  useToasts.test.tsx  useToasts.tsx  useUpdater.ts
src/styles/: index.css
src/types/: index.ts
(+20 files in other folders)
