[package]
name = "docurip"
version = "0.1.0"
description = "High-performance documentation site crawler"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
url = "2"
time = "=0.3.35"
chrono = { version = "0.4", features = ["serde"] }
html2md = "0.2"
headless_chrome = { version = "1", optional = true }
open = "5"
regex = "1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sysinfo = "0.31"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
tempfile = "3"

[features]
headless = ["headless_chrome"]
custom-protocol = ["tauri/custom-protocol"]
