[package]
name = "docurip"
version = "0.4.2"
description = "High-performance documentation site crawler"
authors = ["moku"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
url = "2"
time = "=0.3.35"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
html2md = "0.2"
headless_chrome = { version = "1", optional = true }
open = "5"
regex = "1"
zip = { version = "2.1", default-features = false, features = ["deflate"] }
sysinfo = "0.31"
pulldown-cmark = "0.12"
tempfile = "3"
tauri-plugin-process = "2.3.1"
pdf-extract = "0.12"
lopdf = "0.42"
epub = "2.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util"] }
wiremock = "0.6"

[features]
headless = ["headless_chrome"]
custom-protocol = ["tauri/custom-protocol"]
